# turtlebot3_aws

./: .travis.yml  README.md  waypoint.csv
browser/: robot_controller.html
browser/css/: controller_style.css
browser/js/: app-settings.js  app.js
delivery_robot_sample/nodes/: location_publisher  remote_controller
turtlebot3/turtlebot3_bringup/src/: turtlebot3_diagnostics.cpp
turtlebot3/turtlebot3_description/meshes/vlp-16/: Velodyne.stl
turtlebot3/turtlebot3_description/urdf/: turtlebot3_burger.urdf.xacro  turtlebot3_burger_3d.gazebo.xacro  turtlebot3_burger_3d.urdf.xacro
turtlebot3/turtlebot3_goal_send/: CMakeLists.txt  package.xml
turtlebot3/turtlebot3_goal_send/launch/: aws_navigation.launch  goal_set.launch  way_point_navigation.launch  waypoint_navigation.launch
turtlebot3/turtlebot3_goal_send/src/: 4goal_send.cpp  4goal_waypoint_send_2.cpp  4goal_waypoint_send_3.cpp  4goal_waypoint_send_4.cpp  4goal_waypoint_send_house.cpp  control_wapoint_rviz  control_waypoint_rviz  robot_check_pose.cpp  waypoint_marker.cpp  waypoint_rviz_set.cpp  waypoint_rviz_set_2.cpp  waypoint_set.cpp  waypoint_set_amcl.cpp
turtlebot3/turtlebot3_goal_send_msgs/: CMakeLists.txt  package.xml
turtlebot3/turtlebot3_goal_send_msgs/msg/: goal_multivector.msg  goal_vector.msg
turtlebot3/turtlebot3_navigation/launch/: amcl.launch
turtlebot3/turtlebot3_navigation/param/: base_local_planner_params.yaml  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  move_base_params.yaml
turtlebot3/turtlebot3_navigation/param_cp/: costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml
turtlebot3/turtlebot3_navigation/rviz/: turtlebot3_navigation.rviz
turtlebot3/turtlebot3_slam/config/: turtlebot3_lds_2d.lua  turtlebot3_lds_3d_gazebo.lua
turtlebot3/turtlebot3_slam/launch/: turtlebot3_3d_cartographer.launch  turtlebot3_3d_slam.launch  turtlebot3_cartographer.launch  turtlebot3_slam.launch
turtlebot3/turtlebot3_teleop/nodes/: turtlebot3_teleop_key
turtlebot3_goal_send/: CMakeLists.txt
turtlebot3_goal_send/launch/: aws_navigation.launch  goal_set.launch  waypoint_navigation.launch
turtlebot3_goal_send/src/: 4goal_waypoint_send.cpp  4goal_waypoint_send_2.cpp
turtlebot3_navigation/launch/: amcl.launch
turtlebot3_navigation/param/: costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml
turtlebot3_simulations/goal_send/: CMakeLists.txt
turtlebot3_simulations/goal_send/launch/: goal_set.launch
turtlebot3_simulations/goal_send/src/: 4goal_send.cpp  4goal_waypoint_send.cpp  goal_control_key.cpp  goal_send.cpp  goal_waypoint_control_key.cpp  waypoint_set.cpp
turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_3d_aws.launch  turtlebot3_aws.launch
